# product-crud-api

./: Cargo.toml  README.md  schema.sql
src/: main.rs
src/config/: db.rs
src/controllers/: product_controller.rs
src/models/: product.rs
src/routes/: product_routes.rs
src/services/: product_service.rs
