[package]
name = "ecommerce_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "macros", "chrono", "bigdecimal"] }
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1.45.0", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }